WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193614
getUserMedia with an ideal deviceId constraint doesn't always select the correct device
https://bugs.webkit.org/show_bug.cgi?id=193614
Summary
getUserMedia with an ideal deviceId constraint doesn't always select the corr...
Eric Carlson
Reported
2019-01-19 13:01:15 PST
getUserMedia with an ideal deviceId constraint doesn't always select the correct device
Attachments
Patch
(16.35 KB, patch)
2019-02-13 12:50 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(17.79 KB, patch)
2019-02-13 13:50 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-02-13 12:50:53 PST
Created
attachment 361932
[details]
Patch
youenn fablet
Comment 2
2019-02-13 13:50:03 PST
Created
attachment 361934
[details]
Patch
Radar WebKit Bug Importer
Comment 3
2019-02-13 14:36:44 PST
<
rdar://problem/48052903
>
WebKit Commit Bot
Comment 4
2019-02-13 17:25:44 PST
Comment on
attachment 361934
[details]
Patch Clearing flags on attachment: 361934 Committed
r241489
: <
https://trac.webkit.org/changeset/241489
>
WebKit Commit Bot
Comment 5
2019-02-13 17:25:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug